cmake_minimum_required(VERSION 3.0.6)
project(ImguiMultiView)
add_definitions(-DWIN32 -D_DEBUG -D_WINDOWS  -D_UNICODE -DUNICODE)

function(assign_source_group)
    foreach(_source IN ITEMS ${ARGN})
        if (IS_ABSOLUTE "${_source}")
            file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
        else()
            set(_source_rel "${_source}")
        endif()
        get_filename_component(_source_path "${_source_rel}" PATH)
        string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
        source_group("${_source_path_msvc}" FILES "${_source}")
    endforeach()
endfunction(assign_source_group)

find_package(imgui CONFIG REQUIRED)
file(GLOB files *.cpp Common/*.cpp)
file(GLOB inc_files *.h Common/*.h)
set(ALL_FILES ${files} ${inc_files})
add_executable(ImguiMultiView WIN32 ${ALL_FILES})
assign_source_group(${ALL_FILES})
target_link_libraries(ImguiMultiView PRIVATE d3d12.lib imgui::imgui)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ImguiMultiView)
